--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
   "devDependencies": {
     "@types/nodemon": "^1.19.6",
     "node-static": "^0.7.11",
+    "nodemon": "^3.1.0",
     "socket.io": "^4.7.5"
   },
   "dependencies": {
-    "nodemon": "^3.1.0",
-    "socket.io-client": "^4.7.5"
+    "debug": "^4.3.4",
+    "node-static": "^0.7.11",
+    "socket.io": "^2.5.0",
+    "socket.io-client": "^4.7.5",
+    "ws": "^8.16.0"
   }
 }
